# chogalyzer

./: .gitignore  Cargo.toml  TODO.md  flake.nix  matplot.py  mr.txt  whirl.txt
benches/: my_benchmark.rs
corpora/filtered/: e200.txt  mr.txt
layouts/: chog.txt  pine.txt  qwerty.txt  sturdy.txt  whirl.txt
src/: generation.rs  lib.rs  main.rs  output.rs  stats.rs
src/stats/: bigram_stats.rs  trigram_stats.rs
