[package]
name = "chogalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.26", features = ["derive"] }
indicatif = "0.17.9"
rand = "0.8.5"
shuffle = "0.1.7"
tabled = "0.17.0"

[profile.release]
codegen-units = 1
lto = "fat"
debug = 1
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]
