[package]
name = "chogalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.26", features = ["derive"] }
indicatif = "0.18"
rand = "0.10"
shuffle = "0.2"
tabled = "0.20"

[profile.release]
codegen-units = 1
lto = "fat"
debug = 1
panic = "abort"

[dev-dependencies]
diol = {version = "0.13", default-features = false}

[[bench]]
name = "my_benchmark"
harness = false
